feat: upgrade to Java 25 (#596)
Signed-off-by: Anthony Petrov <anthony@swirldslabs.com>